--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,8 @@
-# for development
+---
 
 version: "3.9"
 
 services:
-  homer:
-    image: b4bz/homer:latest
-    ports:
-      - 8080:8080
-    volumes:
-      - type: bind
-        source: ./test/homer.yml
-        target: /www/assets/config.yml
   hsd:
     build:
       context: .
@@ -29,3 +21,33 @@ services:
       - type: bind
         source: /var/run/docker.sock
         target: /var/run/docker.sock
+
+  homer:
+    image: b4bz/homer:latest
+    ports:
+      - 8080:8080
+    volumes:
+      - type: bind
+        source: ./test/homer.yml
+        target: /www/assets/config.yml
+    logging:
+      driver: none
+    stop_grace_period: 1s
+
+  http-echo:
+    image: hashicorp/http-echo
+    ports:
+      - 5678:5678
+    command:
+      - -text="Be yourself; everyone else is already taken"
+    labels:
+      homer.enable: "true"
+      homer.service: Planes
+      homer.name: Quotes
+      homer.icon: fas fa-comment-dots
+      homer.subtitle: http-echo server
+      homer.url: http://localhost:5678
+      homer.priority: 35
+    logging:
+      driver: none
+    stop_grace_period: 1s
