--- a/test/homer.yml
+++ b/test/homer.yml
@@ -1,46 +1,106 @@
 title: Services
 subtitle: All my stuff
 logo: logo.png
-footer: hello
+footer: false
 connectivityCheck: "false"
 services:
-    - name: Download
-      icon: fas fa-cloud-download-alt
+    - name: Hats
+      icon: fas fa-hat-wizard
       items:
-        - name: NZBGet
-          logo: assets/custom/nzbget.png
-          subtitle: Downloads Files From Usenet
-          url: https://nzbget.example.com
-          position: 1
-        - name: qBittorrent
-          logo: assets/custom/qbittorrent.svg
-          subtitle: Download Torrents
-          url: https://qbittorrent.example.com
-        - name: JDownloader
-          logo: assets/custom/jdownloader.png
-          subtitle: Download Management Tool
-          url: https://jdownloader.example.com
-    - name: Collaboration
-      icon: fas fa-people-carry
+        - name: Cowboy Side
+          icon: fas fa-hat-cowboy-side
+          subtitle: Thanks to EconoPublish for sponsoring this icon!
+          url: https://fontawesome.com/v5.15/icons/hat-cowboy-side?style=solid
+          priority: 5
+        - name: Cowboy
+          icon: fas fa-hat-cowboy
+          url: https://fontawesome.com/v5.15/icons/hat-cowboy?style=solid
+          priority: 3
+        - name: Hard
+          icon: fas fa-hard-hat
+          subtitle: Thanks to the community for voting this icon into Font Awesome!
+          url: https://fontawesome.com/v5.15/icons/hard-hat?style=solid
+          priority: 2
+        - name: Red Hat
+          icon: fab fa-redhat
+          subtitle: Thanks to the community for voting this icon into Font Awesome!
+          url: https://fontawesome.com/v5.15/icons/redhat?style=brands
+          priority: 1
+    - name: Planes
+      icon: fas fa-plane
       items:
-        - name: Nextcloud
-          logo: assets/custom/nextcloud.svg
-          subtitle: File Sharing and Communication Platform
-          url: https://nextcloud.example.com
-        - name: Mattermost
-          logo: assets/custom/mattermost.png
-          subtitle: Online Chat
-          url: https://mattermost.example.com
-        - name: JIRA
-          logo: assets/custom/jira.svg
-          subtitle: Issue Tracking
-          url: https://jira.atlassian.net
-    - name: Sharing
-      icon: fas fa-people-arrows
+        - name: Slash
+          icon: fas fa-plane-slash
+          url: https://fontawesome.com/v5.15/icons/plane-slash?style=solid
+          priority: 120
+        - name: Departure
+          icon: fas fa-plane-departure
+          url: https://fontawesome.com/v5.15/icons/plane-departure?style=solid
+          priority: 100
+        - name: Arrival
+          icon: fas fa-plane-arrival
+          url: https://fontawesome.com/v5.15/icons/plane-arrival?style=solid
+          priority: 50
+        - name: Quotes
+          icon: fas fa-comment-dots
+          subtitle: http-echo server
+          url: http://localhost:5678
+          priority: 35
+        - name: Paper
+          icon: far fa-paper-plane
+          url: https://fontawesome.com/v5.15/icons/paper-plane?style=regular
+          priority: 30
+        - name: Fighter Jet
+          icon: fas fa-fighter-jet
+          url: https://fontawesome.com/v5.15/icons/fighter-jet?style=solid
+          priority: 10
+    - name: Weather
+      icon: fas fa-cloud
       items:
-        - name: Plex
-          logo: assets/custom/plex.png
-          subtitle: Media Server
-          url: https://plex.example.com
-    - name: Tools
-      icon: fas fa-tools
+        - name: Cloud Showers Heavy
+          icon: fas fa-cloud-showers-heavy
+          url: https://fontawesome.com/v5.15/icons/cloud-showers-heavy?style=solid
+          priority: 20
+        - name: Poo Storm
+          icon: fas fa-poo-storm
+          url: https://fontawesome.com/v5.15/icons/poo-storm?style=solid
+          priority: 10
+        - name: Sun
+          icon: fas fa-sun
+          url: https://fontawesome.com/v5.15/icons/sun?style=solid
+          priority: 8
+        - name: Smog
+          icon: fas fa-smog
+          url: https://fontawesome.com/v5.15/icons/smog?style=solid
+          priority: 6
+        - name: Wind
+          icon: fas fa-wind
+          url: https://fontawesome.com/v5.15/icons/wind?style=solid
+          priority: 4
+        - name: Bolt
+          icon: fas fa-bolt
+          url: https://fontawesome.com/v5.15/icons/bolt?style=solid
+          priority: 2
+    - name: Numbers
+      icon: fas fa-list-ol
+      items:
+        - name: "5"
+          icon: fab fa-html5
+          url: https://fontawesome.com/v5.15/icons/html5?style=brands
+          priority: 5
+        - name: "4"
+          icon: fas fa-dice-four
+          url: https://fontawesome.com/v5.15/icons/dice-four?style=solid
+          priority: 4
+        - name: "3"
+          icon: fab fa-css3
+          url: https://fontawesome.com/v5.15/icons/css3?style=brands
+          priority: 3
+        - name: "2"
+          icon: far fa-hand-peace
+          url: https://fontawesome.com/v5.15/icons/hand-peace?style=regular
+          priority: 2
+        - name: "1"
+          icon: far fa-money-bill-alt
+          url: https://fontawesome.com/v5.15/icons/money-bill-alt?style=regular
+          priority: 1
