--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,12 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/main.go"
+            "program": "${workspaceFolder}/cmd/main.go",
+            "env": {
+                "LOG_LEVEL": "Debug",
+                "HOMER_BASE_CONFIG": "../test/base.yml",
+                "HOMER_CONFIG": "../test/homer.yml",
+            }
         }
     ]
 }
