Wording and Defaults (#2)
* Change default file paths

* Show config in Debug

* README update

* only release on tags starting with v

* rename dockerfile

* Update build

* fix typo

* same typo

* add caching

* Update README example

* highlighting

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,24 +12,49 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: 🛎️ Checkout
+        uses: actions/checkout@v2
 
-      - run: echo "go_version=$(cat Dockerfile.compose | grep 'FROM golang:' | grep -o -P '(?<=golang:).*(?=-alpine)')" >> $GITHUB_ENV
+      - name: ⚙️ Get Go version
+        run: echo go_version="$(cat Dockerfile | grep 'FROM golang:' | grep -o -P '(?<=golang:).*(?=-alpine)')" >> $GITHUB_ENV
 
-      - uses: actions/setup-go@v2
+      - name: 🥽 Setup Go
+        uses: actions/setup-go@v2
         with:
           go-version: "${{ env.go_version }}"
 
-      - run: go build -v ./...
+      - name: 🔌 Get cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
-      - run: go test -v ./...
+      - name: 🦺 Go Build
+        run: go build -v ./...
+
+      - name: ⛑️ Go Test
+        run: go test -v ./...
 
   golangci:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - name: 🛎️ Checkout
+        uses: actions/checkout@v2
 
-      - uses: golangci/golangci-lint-action@v2
+      - name: ⚙️ Get Go version
+        run: echo go_version="$(cat Dockerfile | grep 'FROM golang:' | grep -o -P '(?<=golang:).*(?=-alpine)')" >> $GITHUB_ENV
+
+      - name: 🥽 Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.go_version }}"
+
+      - name: 📢 golangci-lint
+        uses: golangci/golangci-lint-action@v2
         with:
           version: latest
+          skip-go-installation: true
