--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ name: release
 on:
   push:
     tags:
-      - "*"
+      - "v*"
 
 jobs:
   release:
@@ -17,19 +17,24 @@ jobs:
       issues: write
 
     steps:
-      - uses: actions/checkout@v2
+      - name: 🛎️ Checkout
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - run: echo go_version="$(cat Dockerfile.compose | grep 'FROM golang:' | grep -o -P '(?<=golang:).*(?=-alpine)')" >> $GITHUB_ENV
+      - name: ⚙️ Get Go version
+        run: echo go_version="$(cat Dockerfile | grep 'FROM golang:' | grep -o -P '(?<=golang:).*(?=-alpine)')" >> $GITHUB_ENV
 
-      - uses: actions/setup-go@v2
+      - name: 🥽 Setup Go
+        uses: actions/setup-go@v2
         with:
           go-version: "${{ env.go_version }}"
 
-      - uses: docker/setup-buildx-action@v1
+      - name: 🛠️ Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - run: |
+      - name: 🧯 Enable Docker experimental features
+        run: |
           echo $'{\n  "experimental": true\n}' | sudo tee /etc/docker/daemon.json
           mkdir -p ~/.docker
           echo $'{\n  "experimental": "enabled"\n}' | sudo tee ~/.docker/config.json
@@ -38,13 +43,15 @@ jobs:
           docker version -f '{{.Server.Experimental}}'
           docker buildx version
 
-      - uses: docker/login-action@v1
+      - name: 🚪 Docker Login
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: goreleaser/goreleaser-action@v2
+      - name: 🛒 Release
+        uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
           version: latest
