add DOCKER_CLI_EXPERIMENTAL to release build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
       packages: write
       issues: write
 
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
+
     steps:
       - name: 🛎️ Checkout
         uses: actions/checkout@v3
