--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,10 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "${{ env.go_version }}"
+          cache: true
+
+      - name: 🌐 Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
       - name: 🛠️ Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
